@@ -4,6 +4,7 @@
     * Add Net::SSLeay::DH class.
     * Add Net::SSLeay::PEM#read_bio_DHparams method.
     * Add Net::SSLeay#get_servername method.
+    * Add Net::SSLeay::SSL_CTX#set_alpn_protos method.
 0.009 2024-11-08
   [Requirement Changes]
     * Require SPVM 0.990029.
